--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
   background: rgb(98, 127, 255);
   width: 500px;
+  min-width: 300px;
   margin: 0 auto;
 
   border-radius: 10px;
@@ -28,6 +29,22 @@ body {
   align-items: center;
 
   gap: 1.8rem;
+}
+
+.input {
+  width: 150px;
+  padding: 8px 20px;
+
+  border: 3px solid rgb(26, 54, 175);
+  border-radius: 8px;
+
+  color: black;
+  text-align: center;
+  font-size: 1rem;
+}
+
+::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 .button {
@@ -63,6 +80,14 @@ body {
 }
 
 .img {
-  width: 400px;
+  width: 100%;
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  #root {
+    margin-top: 0;
+    width: 100%;
+    height: 100vh;
+  }
 }
