--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
   border-radius: 10px;
 
   padding: 40px;
-  margin-top: 100px;
+
+  height: 100%;
 
   justify-content: center;
   align-items: center;
@@ -45,6 +46,10 @@ body {
   color: black;
   text-align: center;
   font-size: 1rem;
+}
+
+.inputMoney {
+  width: 90px;
 }
 
 ::-webkit-inner-spin-button {
